Various fixups and simplifications - all tests pass